setting max_date back to 2020-06-07

--- a/covidWarehouse/manuscript/references.bib
+++ b/covidWarehouse/manuscript/references.bib
@@ -2,6 +2,16 @@
 
 
 
+@article{Dora2020,
+author = {Dora, Amy V. and Winnett, Alexander and Jatt, Lauren P. and Davar, Kusha and Watanabe, Mika and Sohn, Linda and Kern, Hannah S. and Graber, Christopher J. and Goetz, Matthew B.},
+doi = {10.15585/mmwr.mm6921e1},
+journal = {MMWR. Morbidity and Mortality Weekly Report},
+number = {21},
+title = {{Universal and Serial Laboratory Testing for SARS-CoV-2 at a Long-Term Care Skilled Nursing Facility for Veterans — Los Angeles, California, 2020}},
+url = {http://www.cdc.gov/mmwr/volumes/69/wr/mm6921e1.htm?s_cid=mm6921e1_w},
+volume = {69},
+year = {2020}
+}
 
 
 @article{KaiWang2020,
