--- a/covidWarehouse/manuscript/references.bib
+++ b/covidWarehouse/manuscript/references.bib
@@ -1,5 +1,23 @@
 
+@article{Graham2020,
+title = {{SARS-CoV-2 infection, clinical features and outcome of COVID-19 in United Kingdom nursing homes}},
+journal = "Journal of Infection",
+year = "2020",
+doi = " 10.1016/j.jinf.2020.05.073",
+author = "N.S.N. Graham and C. Junghans and R. Downes and C. Sendall and H. Lai and A. McKirdy and P. Elliott and R. Howard and D. Wingfield and M. Priestman and M. Ciechonska and L. Cameron and M. Storch and M.A. Crone and P.S. Freemont and P. Randell and R. McLaren and N. Lang and S. Ladhani and F. Sanderson and D.J. Sharp"
+}
 
+
+@article {Salcher-Konrad2020,
+	author = {Salcher-Konrad, Maximilian and Jhass, Arnoupe and Naci, Huseyin and Tan, Marselia and El-Tawil, Yousef and Comas-Herrera, Adelina},
+	title = {{COVID-19} related mortality and spread of disease in long-term care: First findings from a living systematic review of emerging evidence},
+	year = {2020},
+	doi = {10.1101/2020.06.09.20125237},
+	publisher = {Cold Spring Harbor Laboratory Press},
+	URL = {https://www.medrxiv.org/content/early/2020/06/09/2020.06.09.20125237},
+	eprint = {https://www.medrxiv.org/content/early/2020/06/09/2020.06.09.20125237.full.pdf},
+	journal = {medRxiv}
+}
 
 
 @article{Dora2020,
@@ -52,6 +70,15 @@ year = {2020},
 doi = {10.1056/NEJMoa2005412}
 }
 
+@article {Stall2020,
+	author = {Stall, Nathan M. and Jones, Aaron and Brown, Kevin A and Rochon, Paula A and Costa, Andrew P},
+	title = {{For-profit nursing homes and the risk of COVID-19 outbreaks and resident deaths in Ontario, Canada}},
+	year = {2020},
+	doi = {10.1101/2020.05.25.20112664},
+	URL = {https://www.medrxiv.org/content/early/2020/05/27/2020.05.25.20112664},
+	eprint = {https://www.medrxiv.org/content/early/2020/05/27/2020.05.25.20112664.full.pdf},
+	journal = {medRxiv}
+}
 
 
 # Reports
@@ -136,22 +163,10 @@ note = {Accessed: 2020-06-07}}
   url = {https://CRAN.R-project.org/package=survival},
 }
 
-@Article{Wood2011,
-  title = {Fast stable restricted maximum likelihood and marginal
-likelihood estimation of semiparametric generalized linear models},
-  journal = {Journal of the Royal Statistical Society (B)},
-  volume = {73},
-  number = {1},
-  pages = {3-36},
-  year = {2011},
-  author = {S. N. Wood},
-}
-
-@Book{Wood2017,
-  title = {Generalized Additive Models: An Introduction with R},
-  year = {2017},
-  author = {S.N Wood},
-  edition = {2},
-  publisher = {Chapman and Hall/CRC},
-}
-
+@Manual{Aragon2020,
+    title = {epitools: Epidemiology Tools},
+    author = {Tomas J. Aragon},
+    year = {2020},
+    note = {R package version 0.5-10.1},
+    url = {https://CRAN.R-project.org/package=epitools},
+  }
